# toy

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  main.c  part1.c
.PVS-Studio/State/: ReportState.json  WindowState.json
